data base connection yapıldı

--- a/Backend/WebAPI/appsettings.json
+++ b/Backend/WebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "PostgreSQL" : " Serve= localhost;Port=5432;Databse=jsga; User Id=root; Password=1234;"
+  },
   "AllowedHosts": "*"
 }
