tüm entityler manager sınıfları ve service sınıfları kodlandı

--- a/Backend/Bussiness/Bussiness.csproj
+++ b/Backend/Bussiness/Bussiness.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Dal\Dal.csproj" />
+    <ProjectReference Include="..\Entity\Entity.csproj" />
+  </ItemGroup>
+
 </Project>
