database migrate edildi

--- a/Backend/WebAPI/appsettings.json
+++ b/Backend/WebAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "PostgreSQL" : " Serve= localhost;Port=5432;Databse=jsga; User Id=root; Password=1234;"
+    "PostgreSQL" : " Server= localhost;Port=5432;Database=jsga; User Id=root; Password=1234;"
   },
   "AllowedHosts": "*"
 }
