dal service reagistratıon yapıldı

--- a/Backend/WebAPI/WebAPI.csproj
+++ b/Backend/WebAPI/WebAPI.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bussiness\Bussiness.csproj" />
     <ProjectReference Include="..\Entity\Entity.csproj" />
   </ItemGroup>
 
